--- a/20MCED05_DMV_PRACTICAL_1_A.ipynb
+++ b/20MCED05_DMV_PRACTICAL_1_A.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
        "9      0            237736  30.0708   NaN        C  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
        "9  female  14.0      1      0            237736  30.0708   NaN        C  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
        "0.3838383838383838"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
        "3       0.242363  25.140620  0.615071  0.393075  13.675550"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1245,7 @@
        "9   NaN        C  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1337,7 @@
        "male    0.188908  2.389948  30.726645  0.429809  0.235702  25.523893"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1545,7 @@
        "       male    0.135447  26.507589  0.498559  0.224784   12.661633"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1597,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
        "4   NaN        S       1  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1748,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1945,7 +1945,7 @@
        "9        C       2  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1968,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1985,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2068,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2276,7 +2276,7 @@
        "9        C       2  14.0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2296,7 +2296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2523,7 +2523,7 @@
        "[891 rows x 11 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2535,7 +2535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2555,7 +2555,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2568,7 +2568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -2765,7 +2765,7 @@
        "9       2  14.000000  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2788,7 +2788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2951,7 +2951,7 @@
        "9         1       2      1      0  30.0708        C       2  14.000000"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2963,9 +2963,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Looking at the 5 number summary below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3104,7 +3113,7 @@
        "max     80.000000  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3118,7 +3127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -3134,7 +3143,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3147,12 +3156,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Understanding the using a box plots"
+    "##### Understanding box plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -3178,6 +3187,131 @@
    "metadata": {},
    "source": [
     "###### The median age of the ship passengers is 30 althou we have a lot of outliers here, aged passengers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlation Testing - Chi Square Method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Survived    0    1\n",
+      "Pclass            \n",
+      "1          80  136\n",
+      "2          97   87\n",
+      "3         372  119\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_crosstab = pd.crosstab(df['Pclass'], \n",
+    "                            df['Survived'],  \n",
+    "                               margins = False) \n",
+    "print(data_crosstab) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi square value is  102.88898875696056\n",
+      "P value is 4.549251711298793e-23\n",
+      "Degrees of Freedom: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy import stats\n",
+    "chi2_stat, p_val, dof, ex = stats.chi2_contingency(data_crosstab)\n",
+    "\n",
+    "print(\"Chi square value is \",chi2_stat)\n",
+    "print(\"P value is\",p_val)\n",
+    "print(\"Degrees of Freedom:\",dof)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Binning and Discretization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For age columns\n",
+    "\n",
+    "# 1 - 25 = Young\n",
+    "# 25 - 65 = Middle Age\n",
+    "# 65 - 100 = Old Age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Survived  Pclass  SibSp  Parch     Fare Embarked  Gender        age  \\\n",
+      "0           0       3      1      0   7.2500        S       1  22.000000   \n",
+      "1           1       1      1      0  71.2833        C       2  38.000000   \n",
+      "2           1       3      0      0   7.9250        S       2  26.000000   \n",
+      "3           1       1      1      0  53.1000        S       2  35.000000   \n",
+      "4           0       3      0      0   8.0500        S       1  35.000000   \n",
+      "..        ...     ...    ...    ...      ...      ...     ...        ...   \n",
+      "886         0       2      0      0  13.0000        S       1  27.000000   \n",
+      "887         1       1      0      0  30.0000        S       2  19.000000   \n",
+      "888         0       3      1      2  23.4500        S       2  30.626179   \n",
+      "889         1       1      0      0  30.0000        C       1  26.000000   \n",
+      "890         0       3      0      0   7.7500        Q       1  32.000000   \n",
+      "\n",
+      "      age_class  \n",
+      "0         young  \n",
+      "1    middle_age  \n",
+      "2    middle_age  \n",
+      "3    middle_age  \n",
+      "4    middle_age  \n",
+      "..          ...  \n",
+      "886  middle_age  \n",
+      "887       young  \n",
+      "888  middle_age  \n",
+      "889  middle_age  \n",
+      "890  middle_age  \n",
+      "\n",
+      "[891 rows x 9 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np \n",
+    "  \n",
+    "df['age_class'] = pd.cut(x=df['age'], bins=[1, 25, 65, 100], labels=['young', 'middle_age', 'old_age'])\n",
+    "  \n",
+    "print(df) \n",
+    "  \n",
+    "# We can check the frequency of each bin \n"
    ]
   },
   {
